--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
             <td>{{ user.idUser }}</td>
             <td>{{ user.phone_number }}</td>
             <td>{{ user.last_interaction }}</td>
-            <td>{{ user.model_products }}</td>
+            <td>Product {{ user.model_products }} Logs {{ user.logs }}</td>
 
         </tr>
         {% endfor %}
