--- a/templates/index.html
+++ b/templates/index.html
@@ -167,6 +167,13 @@
         </form>
     </div>
 
+    <div class="back-link">
+        <a href="/configuracion">← Configuración</a>
+    </div>
+    <div class="back-link">
+        <a href="/usuarios">← Usuarios</a>
+    </div>
+
 </body>
 
 </html>
